# dependency-bazelizer-demo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  requirements.txt
.github/workflows/: ci.yml
static_registry/modules/dependency_bazelizer/: metadata.json
static_registry/modules/dependency_bazelizer/0.1.0/: MODULE.bazel  source.json
static_registry/modules/dependency_bazelizer/0.2.0/: MODULE.bazel  source.json
static_registry/modules/dependency_bazelizer/0.3.0/: MODULE.bazel  source.json
transitive_dep_module/: MODULE.bazel
