module(
    name = "demo",
    version = "1.2.3",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.24.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python.toolchain(
    is_default = True,
    python_version = "3.8",
)

use_repo(python, "python_versions", "python_3_8")

register_toolchains("@python_3_8//:all")

pip.parse(
    hub_name = "demo_deps",
    python_version = "3.8",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "demo_deps")

bazel_dep(name = "demo_transitive", version = "")
local_path_override(
    module_name = "demo_transitive",
    path = "./transitive_dep_module/",
)

bazel_dep(name = "dependency_bazelizer", version = "0.2.0")
dependency_bazelizer = use_extension("@dependency_bazelizer//:input.bzl", "dependency_bazelizer")
dependency_bazelizer.config(
    deb_packages_input_file = "//:deb_packages.in", 
    storage_config_file = "//:storage_config.json",
    registry_path_relative_to_root = "my_registry"
)
use_repo(dependency_bazelizer, "dep_bazelizer_config")

#bazel_dep(name="iproute2_amd64", version="5.15.0-1ubuntu2")
